Fixed burger menu on mobile Added link to ls8 page Default to dark themen now correct?

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -122,7 +122,8 @@ a, table.table a {
     display: block;
     width: 22px;
     height: 2px;
-    background-color: $grey-color-dark;
+    //background-color: $grey-color-dark;
+    background-color: var(--global-icon-color);
     border-radius: 1px;
     margin-bottom: 4px;
     transition: all 0.2s;
